Add category CRUD and response DTOs